--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>About Page</title>
+    <title>Projects</title>
   </head>
   <body>
-    {{> header}} 
-    <p>Some text here</p>
+    {{> header}}
+    <p>{{screamIt welcomeMessage}}</p>
     {{> footer}}
   </body>
 </html>
